[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.22", default-features = false, features = ["clock"]}
config = "0.14"
reqwest = "0.12.4"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.3.0" 
tracing = { "version" = "0.1", features = ["log"]}
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tracing-subscriber = { "version" = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
once_cell = "1"