[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.7", features=["redis-rs-session"] }
actix-web = "4"
actix-web-lab = "0.18"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.21"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.14"
hex = "0.4"
hmac = { version="0.12", features = ["std"]}
htmlescape = "0.3"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4"
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.3.0" 
tracing = { "version" = "0.1", features = ["log"]}
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tracing-subscriber = { "version" = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.16"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]


[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "~2.3"
linkify = "0.10"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["rt", "macros"]}
wiremock = "0.5"